[gd_scene load_steps=8 format=3 uid="uid://0eydyr80nf14"]

[ext_resource type="Texture2D" uid="uid://bovoj62to2suy" path="res://Assets/Sprites/Weapon/Axe.png" id="1_c7uor"]
[ext_resource type="Script" path="res://Scripts/Weapon/Axe.gd" id="1_v3u26"]
[ext_resource type="Texture2D" uid="uid://dj55jrlg2s3j6" path="res://Assets/Sprites/Weapon/ImpactLine.png" id="3_dcaw2"]
[ext_resource type="AudioStream" uid="uid://680pab3n84e1" path="res://Assets/Sound/Axe/sword_swipe_body_20826.mp3" id="6_crn6x"]

[sub_resource type="Animation" id="Animation_1f27o"]
resource_name = "Attack"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 1, 1.5),
"transitions": PackedFloat32Array(1, 0.5, -2, -2, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0.698132), Vector3(0, 0, -1.8326), Vector3(0, 0, -1.8326), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../ImpactLine:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4),
"transitions": PackedFloat32Array(1, 2, 1, 2, 1, 2, 1, 2, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 0, 1), Color(1, 1, 1, 1), Color(1, 1, 0, 1), Color(1, 1, 1, 1), Color(1, 1, 0, 1), Color(1, 1, 1, 1), Color(1, 1, 0, 1), Color(1, 1, 1, 1)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../..")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"values": []
}

[sub_resource type="Animation" id="Animation_xtfv2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../ImpactLine:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tt78j"]
_data = {
"Attack": SubResource("Animation_1f27o"),
"RESET": SubResource("Animation_xtfv2")
}

[node name="Axe" type="Node3D"]
script = ExtResource("1_v3u26")
damage = 200

[node name="Marker3D" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.12509, -0.349803, 0)

[node name="Sprite3D" type="Sprite3D" parent="Marker3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.12509, 0.349803, 0)
alpha_antialiasing_mode = 2
texture_filter = 0
texture = ExtResource("1_c7uor")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Marker3D/Sprite3D")
libraries = {
"": SubResource("AnimationLibrary_tt78j")
}

[node name="CollDown" type="Timer" parent="."]

[node name="ImpactLine" type="Sprite3D" parent="."]
transform = Transform3D(0.5, -0.866025, 0, 0.866025, 0.5, 0, 0, 0, 1, 0.5, 0, 0)
modulate = Color(1, 1, 1, 0)
texture_filter = 0
texture = ExtResource("3_dcaw2")

[node name="EnergyReload" type="Timer" parent="."]
wait_time = 8.0

[node name="AxeImpact" type="AudioStreamPlayer" parent="."]

[node name="AxeBody" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_crn6x")

[connection signal="timeout" from="CollDown" to="." method="_on_reload_timeout"]
[connection signal="timeout" from="EnergyReload" to="." method="_on_energy_reload_timeout"]
